--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -4,12 +4,19 @@ on:
     - cron: '0 0 * * 0'  # Runs at 00:00 every Sunday
   workflow_dispatch:      # Allows manual trigger
 
+# Add permissions block
+permissions:
+  contents: write
+
 jobs:
   update-features:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          # Ensure we fetch history for git operations
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -23,9 +30,11 @@ jobs:
         run: node generate-readme.js
 
       - name: Commit and Push Changes
+        env:
+          # Use GITHUB_TOKEN for authentication
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git add README.md
-          git diff --quiet && git diff --staged --quiet || git commit -m "docs: update CSS features list [skip ci]"
-          git push
+          git diff --quiet && git diff --staged --quiet || (git commit -m "docs: update CSS features list [skip ci]" && git push)
